--- a/html/new-control-panel.html
+++ b/html/new-control-panel.html
@@ -44,14 +44,14 @@
       <button type="button" class="btn btn-primary no-visible">Back</button>
     </a>
       <div class="title">
-    <input class="form-control" placeholder="New Control Panel" autofocus="autofocus">
+    <input class="form-control" id="title-input" placeholder="New Control Panel" autofocus="autofocus">
   </div>
     <div class="control-buttons">
       <a href="new-widget.html">
       <button type="button" class="btn btn-primary no-show">Add Widget</button>
     </a>
     <a href="edit-controlpanel.html"
-      <button type="button" class="btn btn-primary">Edit</button>
+      <button type="button" class="btn btn-primary no-show">Edit</button>
     </a>
     </div>
   </div>
