--- a/html/controlpanels.html
+++ b/html/controlpanels.html
@@ -60,13 +60,13 @@
       </a>
       <a href="#" class="panel">
         <h5>Countryhouse</h5>
-        <p>1/23/2015</p>
+        <p id="yellow">1/23/2015</p>
         <p class="status" id="yellow">timeout</p>
       </a>
       <a href="#" class="panel">
         <h5>Brewery</h5>
-        <p>2/14/2016</p>
-        <p class="status" id="red"> not responding</p>
+        <p id="red">2/14/2016</p>
+        <p class="status" id="red">not responding</p>
       </a>
       <a href="#" class="panel">
         <h5>Treehouse</h5>
