--- a/html/devices.html
+++ b/html/devices.html
@@ -67,7 +67,7 @@
       </a>
       <a href="#" class="panel">
         <h5>Test unit</h5>
-        <p >1/14/2016</p>
+        <p id="red">1/14/2016</p>
         <p class="status" id="red">not responding</p>
       </a>
       <a href="#" class="panel">
@@ -77,7 +77,7 @@
       </a>
       <a href="#" class="panel">
         <h5>Security Unit</h5>
-        <p>3/18/2016</p>
+        <p id="red">3/18/2016</p>
         <p class="status" id="red">not responding</p>
       </a>
     </div>
