--- a/html/device.html
+++ b/html/device.html
@@ -83,20 +83,32 @@
 </div>
 <div class="widget-setting">
     <div class="data-unit">
-      <p>Songs: 34</p>
+      <p>Songs</p>
+      <div class="data-line">
+        <p>20</p>
       <h6>5:30am 6/30</h6>
     </div>
+    </div>
     <div class="data-unit">
-      <p>Temp: 22</p>
+      <p>Temp</p>
+      <div class="data-line">
+        <p>22</p>
       <h6>10:13am 7/11</h6>
     </div>
+  </div>
     <div class="data-unit">
-      <p>Distance: 36</p>
+      <p>Distance</p>
+      <div class="data-line">
+        <p>36</p>
       <h6>9:02am 7/10</h6>
     </div>
+  </div>
     <div class="data-unit">
-      <p>Wind Speed: 2</p>
+      <p>Wind Speed</p>
+      <div class="data-line">
+        <p>2</p>
       <h6>1:33am 7/11</h6>
+    </div>
     </div>
 </div>
 <div class="right-setting">
